--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			<li><a href="#">Contacto</a></li>
 		</ul>
 	</nav> 
-	<div>
-		<h1>Personajes de Rick and Morty</h1>
-		<section>
+	<div class="container">
+		<h1>PERSONAJES DE RICK AND MORTY</h1>
+		<section class="section-flex">
 			<article>
 				<header><h2>Rick Sanchez</h2> </header>
 				<img src="./img/Rick.jpeg">
