Actualización del título

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Primera web</title>
+	<title>Mi primera web</title>
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
 	<link rel="stylesheet" type="text/css" href="./css/estilos.css">
 </head>
@@ -13,13 +13,13 @@
 		<ul class="menu">
 			<li class="logo">
 				<a href="#">
-					<img src="./img/logo.png"> 				
+					<img src="./img/logo.png">
 				</a>
 			</li>
 			<li><a href="#">Inicio</a></li>
 			<li><a href="#">Contacto</a></li>
 		</ul>
-	</nav> 
+	</nav>
 	<div class="container">
 		<h1>PERSONAJES DE RICK AND MORTY</h1>
 		<section class="section-flex">
@@ -31,7 +31,7 @@
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
-  
+
 			<article>
 				<header><h2>Morty</h2> </header>
 				<img src="./img/Morty.jpeg">
