--- a/index.html
+++ b/index.html
@@ -23,131 +23,87 @@
 	<div class="container">
 		<h1>PERSONAJES DE RICK AND MORTY</h1>
 		<section class="section-flex">
-			<article>
+			<article class="character">
 				<header><h2>Rick Sanchez</h2> </header>
 				<img src="./img/Rick.jpeg">
-				<div>
+				<div class="info-character">
 					<p><b>Genero:</b> Másculino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
+			<article class="character">
 				<header><h2>Morty</h2> </header>
 				<img src="./img/Morty.jpeg">
-				<div>
+				<div class="info-character">
 					<p><b>Genero:</b> Másculino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
+			<article class="character">
 				<header><h2>Benjamin</h2> </header>
 				<img src="./img/Benjamin.jpeg">
-				<div>
+				<div class="info-character">
 					<p><b>Genero:</b> Másculino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
+			<article class="character">
 				<header><h2>Armagheadon</h2> </header>
 				<img src="./img/Armagheadon.jpeg">
-				<div>
+				<div class="info-character">
 					<p><b>Genero:</b> Másculino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
+			<article class="character">
 				<header><h2>Birdperson</h2> </header>
 				<img src="./img/Birdperson.jpeg">
-				<div>
+				<div class="info-character">
 					<p><b>Genero:</b> Másculino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
+			<article class="character">
 				<header><h2>BlimBlam</h2> </header>
 				<img src="./img/BlimBlam.jpeg">
-				<div>
+				<div class="info-character">
 					<p><b>Genero:</b> Másculino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
+			<article class="character">
 				<header><h2>Arthricia</h2> </header>
 				<img src="./img/Arthricia.jpeg">
-				<div>
+				<div class="info-character">
 					<p><b>Genero:</b> Femenino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
+			<article class="character">
 				<header><h2>Beth</h2> </header>
 				<img src="./img/Beth.jpeg">
-				<div>
+				<div class="info-character">
 					<p><b>Genero:</b> Femenino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
+			<article class="character">
 				<header><h2>Brad</h2> </header>
 				<img src="./img/Brad.jpeg">
-				<div>
+				<div class="info-character"></div>
 					<p><b>Genero:</b> Másculino</p>
 					<p><b>Especie:</b> Humano</p>
 				</div>
 			</article>
 
-			<article>
-				<header><h2>Davin</h2> </header>
-				<img src="./img/Davin.jpeg">
-				<div>
-					<p><b>Genero:</b> Másculino</p>
-					<p><b>Especie:</b> Humano</p>
-				</div>
-			</article>
-
-			<article>
-				<header><h2>Diane Sanchez</h2> </header>
-				<img src="./img/DianeSanchez.jpeg">
-				<div>
-					<p><b>Genero:</b> Femenino</p>
-					<p><b>Especie:</b> Humano</p>
-				</div>
-			</article>
-
-			<article>
-				<header><h2>Ethan</h2> </header>
-				<img src="./img/Ethan.jpeg">
-				<div>
-					<p><b>Genero:</b> Másculino</p>
-					<p><b>Especie:</b> Humano</p>
-				</div>
-			</article>
-
-			<article>
-				<header><h2>Jerry</h2> </header>
-				<img src="./img/Jerry.jpeg">
-				<div>
-					<p><b>Genero:</b> Másculino</p>
-					<p><b>Especie:</b> Humano</p>
-				</div>
-			</article>
-
-			<article>
-				<header><h2>Summer</h2> </header>
-				<img src="./img/Summer.jpeg">
-				<div>
-					<p><b>Genero:</b> Femenino</p>
-					<p><b>Especie:</b> Humano</p>
-				</div>
-			</article>
 		</section>
 	</div>
 	<footer>
